--- a/salary-visualization/src/app/app.component.html
+++ b/salary-visualization/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="intro-text">
+  <div class="intro-text-container">
     <h1>IT Salary Calculator</h1>
 
     <div class="intro-text">
