--- a/salary-visualization/src/app/components/salary-calculator/salary-calculator.component.css
+++ b/salary-visualization/src/app/components/salary-calculator/salary-calculator.component.css
@@ -1,5 +1,6 @@
 .calculator-container {
   width: 100%;
+  box-sizing: border-box; /* Add this to include padding in width calculation */
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -7,3 +8,7 @@
   color: white;
 }
 
+.header {
+  height: 200px;
+}
+s
