--- a/salary-visualization/src/app/app.component.css
+++ b/salary-visualization/src/app/app.component.css
@@ -1,65 +1,3 @@
-:host {
-  display: block;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: #ffffff;
-  background-color: #000000;
-  min-height: 100vh;
-  position: relative;
-  overflow: hidden;
-}
-
-:host::before {
-  content: '';
-  position: absolute;
-  top: -100px;
-  right: -200px;
-  width: 1112px;
-  height: 608px;
-  background-image: url('../assets/images/spirital-7a69e459de5e1b6afeb560734ebeffc4.svg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  opacity: 0.6;
-  z-index: 0;
-  pointer-events: none;
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 2rem;
-  position: relative;
-  z-index: 1;
-}
-
-.intro-text-container {
-  width: 66%;
-}
-
-.intro-text-container h1 {
-  font-size: 80px;
-  text-align: left;
-  font-weight: 500;
-}
-
-
-
-.intro-text {
-  max-width: 800px;
-  margin: 0 auto 30px auto;
-  text-align: left;
-  font-size: 18px;
-  line-height: 1.6;
-  opacity: 0.9;
-}
-
-.big {
-  font-size: 24px;
-}
-
-.intro-text p {
-  margin-bottom: 15px;
-}
-
 .layout-container {
   display: flex;
   flex-wrap: wrap;
@@ -67,37 +5,18 @@
   justify-content: space-between;
 }
 
-.card {
-  flex: 2;
+app-visualization {
+  flex: 2; /* Changed from 1 to 2 to make this card take up 2/3 of the space */
   min-width: 300px;
   position: relative;
   z-index: 2;
+  max-width: calc(66% - 10px); /* Changed from 50% to 66% (2/3) */
 }
 
 app-salary-calculator {
-  flex: 1;
+  flex: 1; /* Kept as 1 to make this card take up 1/3 of the space */
   min-width: 300px;
   position: relative;
   z-index: 2;
-}
-
-@media (max-width: 768px) {
-  .layout-container {
-    flex-direction: column;
-  }
-
-  app-salary-calculator, .card {
-    width: 100%;
-  }
-
-  :host::before {
-    top: -50px;
-    right: -100px;
-    width: 556px;
-    height: 304px;
-  }
-
-  .intro-text {
-    font-size: 16px;
-  }
+  max-width: calc(33% - 10px); /* Changed from 50% to 33% (1/3) */
 }
