--- a/salary-app/src/app/components/salary-result/salary-result.component.html
+++ b/salary-app/src/app/components/salary-result/salary-result.component.html
@@ -25,7 +25,7 @@
                     </div>
                   </div>
                   <div class="experience-value">
-                    <span class="currency">$</span>{{ stat.average }}<span class="unit">K</span>
+                    <span class="currency">$</span>{{ stat.average }}<span class="unit">k</span>
                   </div>
                 </div>
               </div>
